[package]
name = "h-button"
version = "0.1.0"
authors = ["Hubert Gruszecki <hubert.gruszecki@nokia.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
anyhow = { version = "1", features = ["backtrace"] }
embedded-hal = "0.2.7"
embedded-svc = "0.24.0"
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
log = "0.4"
sensible-env-logger = "0.3.1"
esp32-nimble = "0.0.6"
rotary-encoder-hal = "0.5.0"
embedded-controls = "0.1.5"
timestamp-source = "^0.1.3"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
