[package]
name = "h-button"
version = "0.1.0"
authors = ["Hubert Gruszecki <hubert.gruszecki@nokia.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["binstart"] }
anyhow = { version = "1", features = ["backtrace"] }
embedded-hal = "0.2.7"
embedded-svc = "0.25.3"
esp-idf-hal = "0.41.2"
esp-idf-svc = "0.46.0"
log = "0.4"
sensible-env-logger = "0.3.1"
esp32-nimble = "0.1.4"
rotary-encoder-hal = "0.5.0"
embedded-controls = "0.1.5"
embedded-time = "0.12.1"
timestamp-source = "^0.1.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
smart-leds = "*"
ws2812-esp32-rmt-driver = "*"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
